turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:4: error: '{' expected but 'case' found.
		case 1 => setCouleur(black)
                ^Source:5: error: '}' expected but 'case' found.
		case 2 => setCouleur(red)
                ^Source:6: error: '}' expected but 'case' found.
		case 3 => setCouleur(orange)
                ^Source:7: error: illegal start of definition
		case 4 => setCouleur(purple)
                ^Source:14: error: eof expected but '}' found.
}
^